# year1_game

./: .gitignore  CMakeLists.txt
flappy_bird/: ALL_BUILD.vcxproj  AssetManager.cpp  AssetManager.hpp  Bird.cpp  Bird.hpp  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Collision.cpp  Collision.hpp  DEFINTIONS.hpp  FLAPPY_BIRD.vcxproj  FLAPPY_BIRD.vcxproj.filters  Flash.cpp  Flash.hpp  Game.cpp  Game.hpp  GameOverState.cpp  GameOverState.hpp  GameState.cpp  GameState.hpp  Games_Engineering.sln  HUD.cpp  HUD.hpp  INSTALL.vcxproj  INSTALL.vcxproj.filters  InputManager.cpp  InputManager.hpp  Land.cpp  Land.hpp  Main.cpp  MainMenuState.cpp  MainMenuState.hpp  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  PONG.vcxproj  PONG.vcxproj.filters  PRACTICAL_1.vcxproj  PRACTICAL_1.vcxproj.filters  Pipe.cpp  (+11 more)
pong/: main.cpp
pong_build/: ALL_BUILD.vcxproj  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Games_Engineering.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  PONG.vcxproj  PONG.vcxproj.filters  PRACTICAL_1.vcxproj  PRACTICAL_1.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
practical1_build/: ALL_BUILD.vcxproj  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Games_Engineering.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  PRACTICAL_1.vcxproj  PRACTICAL_1.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
practical_1/: main.cpp
space_invaders/: Bullet.cpp  Bullet.hpp  Game.hpp  Main.cpp  (+5 more)
(+744 files in other folders)
